[gd_scene load_steps=8 format=3 uid="uid://bjvryepq3i7so"]

[ext_resource type="Script" path="res://Player.gd" id="1_53fsj"]
[ext_resource type="PackedScene" uid="uid://bf27umi31fi3g" path="res://bullet.tscn" id="2_kwlst"]
[ext_resource type="Texture2D" uid="uid://brewpv151c6np" path="res://assets/topdown-shooter/Spritesheet/spritesheet_characters.png" id="3_kunr3"]
[ext_resource type="Texture2D" uid="uid://c8t150angcs0b" path="res://assets/kenney_topdowntanksredux/Spritesheet/onlyObjects_default.png" id="4_da1se"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_57vff"]
size = Vector2(42, 42)

[sub_resource type="Animation" id="Animation_a3vrx"]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6da5t"]
_data = {
"muzzle_flash": SubResource("Animation_a3vrx")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_53fsj")
bullet = ExtResource("2_kwlst")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_kunr3")
region_enabled = true
region_rect = Rect2(0, 0, 56, 44)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 0)
shape = SubResource("RectangleShape2D_57vff")

[node name="spawn_bullet" type="Marker2D" parent="."]
position = Vector2(33, 9)

[node name="gun_direction" type="Marker2D" parent="."]
position = Vector2(34, 9)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(44, 9)
rotation = -1.5708
scale = Vector2(0.5, 1.2)
texture = ExtResource("4_da1se")
region_enabled = true
region_rect = Rect2(324, 334, 20, 25)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6da5t")
}
